# telemetry-anomaly-detection-demo

./: .gitignore  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: tests.yml
data/: telemetry.csv
examples/: anomaly_report.md  scored_telemetry.csv
src/telemetry_anomaly_detection/: __init__.py  __main__.py  cli.py  detector.py  io.py  simulate.py
tests/: test_cli.py  test_detector.py  test_simulate.py
